[gd_scene load_steps=8 format=3 uid="uid://qgswqllq6yy4"]

[ext_resource type="Resource" uid="uid://bf24hc4eg5db1" path="res://Resources/character_data/player.tres" id="2_1bvp3"]
[ext_resource type="PackedScene" uid="uid://bwvanrepu77jf" path="res://UI/target_selection_panel.tscn" id="2_272bh"]
[ext_resource type="PackedScene" uid="uid://bjwoinc6f0260" path="res://Characters/character.tscn" id="2_h2yge"]
[ext_resource type="Resource" uid="uid://c1pd2rf2tkv5r" path="res://Resources/character_data/slime.tres" id="3_lquwl"]
[ext_resource type="Script" uid="uid://c356u58p0njda" path="res://Scripts/Battle/BattleStateManager.gd" id="5_7mycd"]
[ext_resource type="Script" uid="uid://b534dbp3koev3" path="res://Scripts/Battle/BattleManager.gd" id="5_lquwl"]
[ext_resource type="PackedScene" uid="uid://blv70ewr4df42" path="res://UI/skill_selection_panel.tscn" id="6_7mycd"]

[node name="Main" type="Node2D"]

[node name="BattleUI" type="CanvasLayer" parent="."]
layer = 128

[node name="SkillSelectionPanel" parent="BattleUI" instance=ExtResource("6_7mycd")]
unique_name_in_owner = true
offset_left = 320.0
offset_right = -576.0

[node name="TargetSelectionPanel" parent="BattleUI" instance=ExtResource("2_272bh")]
unique_name_in_owner = true
offset_left = 640.0
offset_right = -256.0

[node name="ButtonsPanel" type="Panel" parent="BattleUI"]
offset_right = 256.0
offset_bottom = 192.0

[node name="HBoxContainer" type="VBoxContainer" parent="BattleUI/ButtonsPanel"]
layout_mode = 0
offset_right = 256.0
offset_bottom = 192.0

[node name="AttackButton" type="Button" parent="BattleUI/ButtonsPanel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Attack"

[node name="DefendButton" type="Button" parent="BattleUI/ButtonsPanel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Defend
"

[node name="SkillButton" type="Button" parent="BattleUI/ButtonsPanel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Skill"

[node name="EnemySides" type="Node" parent="." groups=["EnemySides"]]
unique_name_in_owner = true

[node name="Slime" parent="EnemySides" instance=ExtResource("2_h2yge")]
position = Vector2(832, 448)
cd = ExtResource("3_lquwl")

[node name="PlayerSides" type="Node" parent="."]
unique_name_in_owner = true

[node name="Player" parent="PlayerSides" groups=["Player"] instance=ExtResource("2_h2yge")]
position = Vector2(192, 448)
cd = ExtResource("2_1bvp3")

[node name="BattleManager" type="Node" parent="."]
script = ExtResource("5_lquwl")

[node name="BattleStateManager" type="Node" parent="BattleManager"]
script = ExtResource("5_7mycd")
metadata/_custom_type_script = "uid://c356u58p0njda"
